--- a/.github/workflows/quay.yml
+++ b/.github/workflows/quay.yml
@@ -36,24 +36,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       
-      - name: Install buildah 1.19
-        shell: bash
+      - name: Workaround for buildah 1.20.0
         run: |
-          sudo apt-get remove buildah
-          sudo apt-get -y install software-properties-common
-          sudo add-apt-repository -y ppa:alexlarsson/flatpak
-          sudo apt-get -y -qq update
-          sudo apt-get -y install bats libapparmor-dev libdevmapper-dev libglib2.0-dev libgpgme11-dev libseccomp-dev libselinux1-dev skopeo-containers go-md2man
-          sudo apt-get -y install golang-1.13
-          mkdir ~/buildah
-          cd ~/buildah
-          export GOPATH=`pwd`
-          git clone https://github.com/containers/buildah ./src/github.com/containers/buildah
-          cd ./src/github.com/containers/buildah
-          git checkout release-1.19
-          PATH=/usr/lib/go-1.13/bin:$PATH make runc all SECURITYTAGS="apparmor seccomp"
-          sudo make install install.runc
-          buildah version
+          sudo apt-get install fuse-overlayfs
+          mkdir -vp ~/.config/containers
+          printf "[storage.options]\nmount_program=\"/usr/bin/fuse-overlayfs\"" > ~/.config/containers/storage.conf
 
       # Build image using Dockerfile
       # https://github.com/redhat-actions/buildah-build/blob/main/README.md
