--- a/.github/workflows/quay.yml
+++ b/.github/workflows/quay.yml
@@ -21,14 +21,13 @@ on:
 jobs:
   # this job will only be triggered when a PR is merged
   deployments:
-    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true && github.event.label.name == 'deploy_test'
     name: Build and Push to Quay
     runs-on: ubuntu-20.04
 
     steps:
       # Print out the PR number 
       - name: Print out the PR number 
-        if: github.event.label.name == 'deploy_test'
         run: |
           echo PR #${{ github.event.number }}
 
@@ -38,7 +37,6 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Workaround for buildah 1.20.0
-        if: github.event.label.name == 'deploy_test'
         run: |
           sudo apt-get install fuse-overlayfs
           mkdir -vp ~/.config/containers
@@ -47,7 +45,6 @@ jobs:
       # Build image using Dockerfile
       # https://github.com/redhat-actions/buildah-build/blob/main/README.md
       - name: Build an Image
-        if: github.event.label.name == 'deploy_test'
         uses: redhat-actions/buildah-build@v2
         with:
           image: ${{ env.IMAGE_NAME }}
@@ -58,7 +55,6 @@ jobs:
       # Push the image to the registry
       # https://github.com/redhat-actions/push-to-registry/blob/main/README.md
       - name: Push To Red Hat Registry, Quay
-        if: github.event.label.name == 'deploy_test'
         id: push-to-quay
         uses: redhat-actions/push-to-registry@v2.1.1
         with:
@@ -69,5 +65,4 @@ jobs:
           password: ${{ env.REGISTRY_PASSWORD }}
 
       - name: Print out the path the image was pushed to
-        if: github.event.label.name == 'deploy_test'
         run: echo "New image has been pushed to ${{ steps.push-to-quay.outputs.registry-paths }}"
